; ModuleID = '/home/carl/AnghaBench/libgit2/tests/core/extr_oid.c_test_core_oid__streq.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/core/extr_oid.c_test_core_oid__streq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@id = common dso_local global i32 0, align 4
@str_oid = common dso_local global i8* null, align 8
@.str = private unnamed_addr constant [41 x i8] c"deadbeefdeadbeefdeadbeefdeadbeefdeadbeef\00", align 1
@.str.1 = private unnamed_addr constant [9 x i8] c"deadbeef\00", align 1
@.str.2 = private unnamed_addr constant [22 x i8] c"I'm not an oid.... :)\00", align 1
@idp = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [41 x i8] c"ae90f12eea699729ed0000000000000000000000\00", align 1
@.str.4 = private unnamed_addr constant [19 x i8] c"ae90f12eea699729ed\00", align 1
@.str.5 = private unnamed_addr constant [20 x i8] c"ae90f12eea699729ed1\00", align 1
@.str.6 = private unnamed_addr constant [19 x i8] c"ae90f12eea699729ec\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_core_oid__streq() #0 {
  %1 = load i8*, i8** @str_oid, align 8
  %2 = call i32 @git_oid_streq(i32* @id, i8* %1)
  %3 = call i32 @cl_assert_equal_i(i32 0, i32 %2)
  %4 = call i32 @git_oid_streq(i32* @id, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str, i64 0, i64 0))
  %5 = call i32 @cl_assert_equal_i(i32 -1, i32 %4)
  %6 = call i32 @git_oid_streq(i32* @id, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0))
  %7 = call i32 @cl_assert_equal_i(i32 -1, i32 %6)
  %8 = call i32 @git_oid_streq(i32* @id, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.2, i64 0, i64 0))
  %9 = call i32 @cl_assert_equal_i(i32 -1, i32 %8)
  %10 = call i32 @git_oid_streq(i32* @idp, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.3, i64 0, i64 0))
  %11 = call i32 @cl_assert_equal_i(i32 0, i32 %10)
  %12 = call i32 @git_oid_streq(i32* @idp, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.4, i64 0, i64 0))
  %13 = call i32 @cl_assert_equal_i(i32 0, i32 %12)
  %14 = call i32 @git_oid_streq(i32* @idp, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.5, i64 0, i64 0))
  %15 = call i32 @cl_assert_equal_i(i32 -1, i32 %14)
  %16 = call i32 @git_oid_streq(i32* @idp, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.6, i64 0, i64 0))
  %17 = call i32 @cl_assert_equal_i(i32 -1, i32 %16)
  %18 = call i32 @git_oid_streq(i32* @idp, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str, i64 0, i64 0))
  %19 = call i32 @cl_assert_equal_i(i32 -1, i32 %18)
  %20 = call i32 @git_oid_streq(i32* @idp, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0))
  %21 = call i32 @cl_assert_equal_i(i32 -1, i32 %20)
  %22 = call i32 @git_oid_streq(i32* @idp, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.2, i64 0, i64 0))
  %23 = call i32 @cl_assert_equal_i(i32 -1, i32 %22)
  ret void
}

declare dso_local i32 @cl_assert_equal_i(i32, i32) #1

declare dso_local i32 @git_oid_streq(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
